# mxcro_proj

./: .gitignore  CMakeLists.txt  README.md
ext/: CMakeLists.txt
ext/mxcro/: CMakeLists.txt
ext/mxcro/ext/: CMakeLists.txt
ext/mxcro/ext/glad/include/glad/: gl.h
ext/mxcro/ext/glad/src/: gl.c
ext/mxcro/include/mx/: buffers.h  context.h  contextRender.h  keycodes.h  math.h  mxcro.h  mxcro.hpp  renderAttributeTypes.h  shader.h  shaderStorageBuffer.h  texture.h  types.h  uniformBuffer.h
ext/mxcro/include/mx/core/: context.hpp  coreEvents.hpp  event.hpp  eventManager.hpp  macros.hpp  types.hpp
ext/mxcro/include/mx/gfx/: buffers.hpp  contextRender.hpp  contextRender3D.hpp  frameBuffer.hpp  renderAttributeTypes.hpp  shader.hpp  shaderStorageBuffer.hpp  shape.hpp  shapeDrawData.hpp  shapeGeometry.hpp  shapeInstance.hpp  texture.hpp  uniformBuffer.hpp
ext/mxcro/include/mx/io/: event.hpp  eventManager.hpp  keycodes.hpp
ext/mxcro/include/mx/maths/: calculus.hpp  mat4.hpp  math.hpp  quaternion.hpp  vec2.hpp  vec3.hpp
ext/mxcro/src/: buffers.cpp  context.cpp  contextRender.cpp  context_win32.cpp  context_x11.cpp  math.cpp  renderAttributeTypes.cpp  shader.cpp  texture.cpp  types.cpp  uniformBuffer.cpp
ext/mxcro/src/core/: context.cpp  context_win32.cpp  context_x11.cpp  coreEvents.cpp  types.cpp
ext/mxcro/src/gfx/: buffers.cpp  contextRender.cpp  contextRender3D.cpp  renderAttributeTypes.cpp  shader.cpp  shape.cpp  shapeDrawData.cpp  shapeGeometry.cpp  shapeInstance.cpp  texture.cpp  uniformBuffer.cpp
ext/mxcro/src/maths/: mat4.cpp  math.cpp  quaternion.cpp  vec2.cpp  vec3.cpp
ext/mxphsx/: CMakeLists.txt
ext/mxphsx/include/mxphsx/: broadphase.h  colliders.h  math.h  mxphsx.h  narrowphase.h  rigidbody.h  types.h  world.h
ext/mxphsx/src/: broadphase.cpp  colliders.cpp  math.cpp  narrowphase.cpp  rigidbody.cpp  world.cpp
mxcro/: CMakeLists.txt
mxcro/ext/: CMakeLists.txt
mxcro/ext/glad/include/glad/: gl.h
mxcro/include/mx/: buffers.h  context.h  contextRender.h  math.h  mxcro.h  shader.h  types.h
mxcro/src/: buffers.cpp  context.cpp  contextRender.cpp  math.cpp  shader.cpp
src/: main.cpp  object.h
